front/src/components/Chat/chatStyles.scss
@use 'src/styles/vars';

.chat {
  display: flex;
  justify-content: space-between;
  flex-direction: column;
  height: 80vh;
  max-width: 600px;
  margin: 0 auto;
  background-color: #f4f7fc;
  border-radius: 8px;
  box-shadow: 0 4px 10px rgb(0 0 0 / 10%);
  overflow: scroll;
  position: relative;

  &-title {
    font-weight: bold;
    font-style: italic;        
    color: vars.$primary-color !important;
    font-size: 1.3rem !important;
    text-align: left;
    margin-bottom: 2rem;
  }

  &-opportunity {
    max-height: 80px !important;
    overflow-y: auto;
    margin-bottom: 1rem;

    &-button {
      font-weight: 500;
      color: #fff;
      background-color: #16bc90;
      border: none;
      padding: 0.1rem 0.2rem;
      margin: 0.2rem;
      cursor: default !important;
      font-size: 0.9rem;
    }
  }
}

  .message-list {
    padding: 20px;
    display: flex !important;
    flex-direction: column;
  }

  .message-bubble {
    max-width: 70% !important;
    padding: 10px 15px;
    border-radius: 20px;
    position: relative;
    text-align: left;
    margin-bottom: 20px;
  }

  .sent {
    background-color: vars.$primary-color !important;
    color: white;
    align-self: flex-end;
  }

  .received {
    background-color: #e5e5e5;
    color: #333;
    align-self: flex-start;
  }

  .message-timestamp {
    font-size: 0.8em;
    color: #888;
    position: absolute;
    bottom: -20px;
    right: 10px;
  }

  .message-status {
    padding: 10px;
    border-top: 1px solid #ddd;
    display: flex !important;
    justify-content: center;
  }
  
  .message-input-container {
    padding: 10px;
    border-top: 1px solid #ddd;
    position: static;
    bottom: 0;
    width: 100%;
    z-index: 5 !important;  
  }

  .message-input {
    border-radius: 25px;
    border: 1px solid #ddd;
    font-size: 1em;
  }

  .send-button {
    background-color: vars.$primary-color !important;
    border-color: vars.$primary-color !important;
    color: white;
    font-size: 1em;
    border-radius: 25px;
  }

  .send-button:hover {
    background-color: #0056b3;
  }

  .w-100 {
    width: 100%;
  }

  .send-button .mobile-symbol {
    display: none;
  }

  .chat-completed {
    background-color: vars.$secondary-color !important;
    border-color: vars.$secondary-color !important;
    color: white;   
    
    &:hover, :focus, :active {
        background-color: vars.$secondary-color !important;
        border-color: vars.$secondary-color !important;
    }
  }
  
  /* Hide the "Send" text on mobile and show the symbol '>' */
  @media (max-width: 1100px) {
    .send-button .send-text {
      display: none;
    }
  
    .send-button .mobile-symbol {
      display: inline-block; /* Show the '>' symbol on mobile */
    }
  }

